# dnd-dm-copilot

./: .coverage  .flake8  .gitignore  .secrets.baseline  CLAUDE.md  CONTEXT.md  Makefile  README.md  env.example  main.py  presentation_slides.md  pyproject.toml  test_api_endpoints.sh
.github/workflows/: ci.yml
data/indices/mechanics/: index.faiss  passages.json
data/processed/: 5e_corpus.json
dnd_dm_copilot/: __init__.py
dnd_dm_copilot/api/: __init__.py  main.py
dnd_dm_copilot/api/models/: schemas.py
dnd_dm_copilot/api/routers/: health.py  mechanics.py
dnd_dm_copilot/api/services/: __init__.py  generator.py  retriever.py
dnd_dm_copilot/api/static/demo/: index.html
dnd_dm_copilot/data/: __init__.py  base_processor.py
dnd_dm_copilot/data/crd3/: .gitignore  00_download_data.sh  01_create_training_pairs.py  02_filter_data.py  03_extract_dm_only.py  04_high_quality_filter.py  __init__.py
dnd_dm_copilot/data/dnd_mechanics/: 00_download_data.sh  01_create_training_pairs.py
dnd_dm_copilot/data/fireball/: 00_download_data.sh  01_create_training_pairs.py
dnd_dm_copilot/data/pdf/: __init__.py  process_pdfs.py
dnd_dm_copilot/data/reddit/: ingest.py  notes0.txt  notes1.txt  notes2.txt  notes3.txt  notes4.txt  notes5.txt  notes6.txt  notes7.txt
dnd_dm_copilot/data/text/: __init__.py  process_texts.py
dnd_dm_copilot/evaluation/: __init__.py  generate_questions.py  judge_answers.py  metrics.py  run_rag_pipeline.py
dnd_dm_copilot/model/: __init__.py  lfm2_client.py  llm_client.py
dnd_dm_copilot/training/: finetune.py
dnd_dm_copilot/utils/: __init__.py  config.py  file_io.py  huggingface.py  logging.py
dnd_dm_copilot/visualization/: embedding_analysis.py
docs/: DATA_SOURCES.md  IMPLEMENTATION_PLAN.md  TECHNICAL_DETAILS.md
scripts/: __init__.py  build_index.py  compare_models.py  download_models.py  push_to_hub.py
tests/: conftest.py
tests/api/: test_schemas.py
tests/api/routers/: __init__.py  test_health.py  test_mechanics.py
tests/api/services/: test_generator.py  test_retriever.py
tests/data/: test_base_processor.py  test_crd3.py  test_crd3_extract_dm_only.py  test_crd3_filter_data.py  test_crd3_high_quality_filter.py  test_dnd_mechanics.py  test_pdf_processor.py  test_text_processor.py
tests/evaluation/: test_judge_answers.py  test_metrics.py  test_question_generation.py  test_run_rag_pipeline.py
tests/model/: test_lfm2_client.py  test_llm_client.py
tests/training/: test_finetune.py
tests/utils/: test_config.py  test_file_io.py
