[project]
name = "dnd-dm-copilot"
version = "0.1.0"
description = "A context-aware RAG system for D&D Dungeon Masters - fine-tuned embedding model for campaign assistance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM Interface
    "openai",

    # Core ML libraries
    "datasets<4.0",
    "sentence-transformers>=5.1.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    
    # Data processing
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.20.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "umap-learn>=0.5.0",
    
    # API and HTTP
    "requests>=2.31.0",
    "httpx>=0.24.0",
    
    # Configuration and utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    
    # Development and testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]


[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
